[tool.poetry]
name = "blinker-app"
version = "0.1.0"
description = "Blinker Trigger via MQTT protocol"
authors = ["quantumwaffy <sashchystyh@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
paho-mqtt = "^1.6.1"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
